# ChatTool

./: .coveragerc  .env.example  .gitignore  .gitmodules  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  DEVELOP.md  Dockerfile.playground  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README_en.md  README_zh_CN.md  awesome-claude-skills  codecov.yml  index.html  mkdocs.yml  next_to_do.md  plan.md  planning.md  pyproject.toml  requirements_dev.txt  sample.test.md  setup.cfg  setup.py  sitemap.xml  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yaml  preview.yaml  public.yml  publish.yml  skill-review.yml  test.yml
Playground/: AGENTS.md  MEMORY.md  setup.md
Playground/knowledge/: README.md
Playground/playgrounds/: README.md
Playground/reports/: README.md
Playground/thoughts/: README.md  current.md
application/zulip_kb/: index.html
application/zulip_structure/: index.html
blog/chatenv-provider-discovery/: index.html
blog/chattool-pypi-init-chatarch/: index.html
blog/code_tool_skill/: index.html
blog/free-image-guide/: index.html
blog/lark-message-session-debug/: index.html
blog/larkbot-tutorial/: index.html
blog/larkbot_v053/: index.html
chat/: index.html
chatapi_toolkit/: __init__.py  asynctool.py  chattool.py  checkpoint.py  cli.py  proxy.py  request.py  response.py
chattool/: __init__.py  asynctool.py  chattool.py  chattype.py  checkpoint.py  cli.py  const.py  finetune.py  functioncall.py  request.py  response.py  tokencalc.py
chattool/core/: __init__.py  chattype.py  config.py  request.py  response.py
chattool/fastobj/: basic.py  capture.py
chattool/tools/: __init__.py  githubclient.py  zulipclient.py
chattool/utils/: __init__.py
cli-tests/: README.md  conftest.py  index.md
cli-tests/cc/: test_chattool_cc_basic.md  test_chattool_cc_basic.py
cli-tests/chatenv/: test_chatenv_basic.md  test_chatenv_basic.py
cli-tests/dns/: test_chattool_dns_basic.md  test_chattool_dns_basic.py
cli-tests/docker/: test_chattool_docker_basic.md
cli-tests/env/: test_chattool_env_basic.md  test_chattool_env_basic.py  test_chattool_env_typed_profiles.md  test_chattool_env_typed_profiles.py
cli-tests/explore/: test_chattool_explore_basic.md  test_chattool_explore_basic.py
cli-tests/gh/: test_chattool_gh_actions_diagnostics.md  test_chattool_gh_actions_diagnostics.py  test_chattool_gh_basic.md  test_chattool_gh_basic.py
cli-tests/lark/: test_chattool_lark_basic.md  test_chattool_lark_basic.py  test_chattool_lark_doc_basic.md  test_chattool_lark_doc_basic.py  test_chattool_lark_doc_create_notify_task.py  test_chattool_lark_doc_markdown.md  test_chattool_lark_env.py  test_chattool_lark_listen_task.md
cli-tests/lark-calendar/: test_chattool_lark_calendar_basic.md
cli-tests/lark-im/: test_chattool_lark_im_basic.py
cli-tests/lark-troubleshoot/: test_chattool_lark_troubleshoot_basic.md  test_chattool_lark_troubleshoot_basic.py  test_chattool_lark_troubleshoot_message_task.md
cli-tests/mcp/: test_chattool_mcp_basic.md
cli-tests/nginx/: test_chattool_nginx_render_basic.md  test_chattool_nginx_render_basic.py
cli-tests/pypi/: test_chattool_pypi_basic.md  test_chattool_pypi_basic.py  test_chattool_pypi_probe.md  test_chattool_pypi_probe.py
cli-tests/serve/: test_chattool_serve_basic.md
cli-tests/setup/: test_chattool_setup_alias_basic.md  test_chattool_setup_basic.md  test_chattool_setup_cli_basic.md  test_chattool_setup_codex_env.md  test_chattool_setup_codex_env.py  test_chattool_setup_interactive_policy_basic.md  test_chattool_setup_lark_cli_env.md  test_chattool_setup_lark_cli_env.py  test_chattool_setup_playground_real_basic.md  test_chattool_setup_playground_real_basic.py  test_chattool_setup_workspace_real_basic.md  test_chattool_setup_workspace_real_basic.py
cli-tests/skill/: test_chattool_release_tag_format.md  test_chattool_release_tag_format.py  (+7 more)
client/: index.html
configuration/: index.html
demo/: zulipclient.ipynb
dev/: 404.html  index.html  sitemap.xml
development-guide/: index.html
docker/: README.md  chromium.env.example  docker-compose.chromium.yml  docker-compose.headless-chromedriver.yml  docker-compose.nas.yml  docker-compose.playwright.yml  headless-chromedriver.env.example  nas.env.example  playwright.env.example
docs/: Makefile  browser_planning.md  chat.md  client.md  conf.py  configuration.md  dns.md  index.md  index.rst  installation.rst  make.bat  make.jl  mcp.md  setup-hermes.md  usage.rst
en/: index.html
env/: index.html
examples/: chat_example.ipynb  dns_manager.ipynb  dns_manager.ipynb.bak  httpclient_example.ipynb  openai_client_example.ipynb
larkbot/: index.html
mcp/: index.html
mock-cli-tests/: README.md  conftest.py  index.md
openai_api_call/: __init__.py  async_process.py  asynctool.py  chat.py  chattool.py  checkpoint.py  cli.py  data.py  proxy.py  request.py  response.py  tokencalc.py
planning/: README.md  brainstorm.md  decision_log.md  guide.md  module.md  roadmap.md  tools.md
playground/: .gitignore  create_lark_doc.py  lark_doc_info.json
reference/: migration-inventory.md
scripts/: migrate_chattool_envs_to_chatarch.py
search/: search_index.json
setup-hermes/: index.html
skills/: README.md
tests/: .gitignore  __init__.py  conftest.py  const.py  readme.md  test_aliyun.py  test_async.py  test_azureclient.py  test_chat.py  test_chatapi_toolkit.py  test_chatenv.py  test_chattool.py  test_checkpoint.py  test_client.py  test_curlcmd.py  test_env_cli.py  test_env_mechanism.py  test_envs.py  test_finetune.py  test_funcdesc.py  test_function.py  test_githubclient.py  test_import.py  test_mask.py  test_oaiclient.py  test_openai_api_call.py  test_proxy.py  test_request.py  test_response.py  test_setup_alias.py  test_setup_cc_connect.py  test_setup_interactive_policy.py  test_setup_nodejs.py  test_setup_playground.py  test_setup_runtime_requirements.py  test_setup_uv.py  test_smoke.py  test_tools.py  test_zulipclient.py
tools/: index.html
workspace/: agents.md
(+1068 files in other folders)
