[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chattool"
dynamic = ["version"]
authors = [
    {name = "Rex Wang", email = "1073853456@qq.com"}
]
description = "Toolkit for Chat API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["chattool"]
license = {text = "MIT license"}
dependencies = [
    "Click>=7.0",
    "requests>=2.20",
    "aiohttp>=3.8",
    "tqdm>=4.60",
    # "docstring_parser>=0.10",
    "python-dotenv>=0.17.0",
    "loguru>=0.7",
    "fastmcp; python_version >= '3.10'",
    "batch_executor>=0.3.0",
    "colorama",
    "fastapi",
    "uvicorn",
    "platformdirs>=3.0",
    "pydantic>=2.0.0",
    "httpx",
    "PyGithub",
    "filelock"
]

[project.optional-dependencies]
dev = [
    "wheel",
    "coverage",
    "twine",
    "pytest>=3",
    "pytest-asyncio",
    "pytest-mock",
    "alibabacloud_alidns20150109==3.5.10",
    "alibabacloud_tea_openapi>=0.3.0",
    "tencentcloud-sdk-python",
    "dnspython",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.6.0",
    "mkdocs-static-i18n>=0.53",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mkdocs-redirects>=1.2.0",
    "mike>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/cubenlp/chattool"
Repository = "https://github.com/cubenlp/chattool"

[project.scripts]
chattool = "chattool.client:main"

[tool.setuptools.dynamic]
version = {attr = "chattool.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test"
]
filterwarnings = [
    "ignore::DeprecationWarning:alibabacloud_tea_openapi.*",
    "ignore::DeprecationWarning:tencentcloud.*",
    "ignore::UserWarning:tencentcloud.*",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning"
]

