[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chattool"
dynamic = ["version"]
authors = [
    {name = "Rex Wang", email = "1073853456@qq.com"}
]
description = "Toolkit for Chat API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
keywords = ["chattool"]
license = {text = "MIT license"}
dependencies = [
    "Click>=7.0",
    "chatgh>=0.2.6,<0.3.0",
    "chatstyle>=0.1.0,<0.2.0",
    "chatenv>=0.2.0,<0.3.0",
    "requests>=2.20",
    "python-dotenv>=0.17.0",
    "colorama",
    "httpx",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
interactive = [
    "questionary>=2.1.0",
    "prompt_toolkit",
]
batch = [
    "batch_executor>=0.3.0",
    "filelock",
]
dns = [
    "ChatDNS>=0.1.0,<0.2.0",
]
lark = [
    "lark-oapi==1.5.3",
    "flask",
]
images = [
    "dashscope"
]
screenshot = [
    "selenium",
    "pillow",
    "imageio"
]
browser = [
    "selenium",
    "pillow",
    "imageio",
    "playwright"
]
serve = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
]
mcp = [
    "fastmcp; python_version >= '3.10'",
]
client = [
    "gitpython",
    "rich",
]
pypi = [
    "build",
    "twine",
]
setup = [
    "chatup>=0.2.0,<0.3.0",
]
tools = [
    "chattool[batch,browser,client,dns,images,interactive,lark,mcp,serve,screenshot]",
]
tests = [
    "coverage",
    "pytest>=3",
    "pytest-asyncio",
    "pytest-mock",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.6.0",
    "mkdocs-static-i18n>=0.53",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mkdocs-redirects>=1.2.0",
    "mike>=1.1.2",
    "pyparsing>=3.0",
]
dev = [
    "wheel",
    "build",
    "twine",
    "chattool[docs,setup,tests,tools]",
]
[project.urls]
Homepage = "https://github.com/cubenlp/chattool"
Repository = "https://github.com/cubenlp/chattool"

[project.scripts]
chattool = "chattool.client:main_cli"
chatpypi = "chattool.client:main_pypi_cli"
chatskill = "chattool.client:main_skill_cli"
chatmcp = "chattool.mcp:main"

[project.entry-points."chatenv.configs"]
chattool = "chattool.config"

[tool.setuptools.dynamic]
version = {attr = "chattool.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test",
    "e2e: mark test as end-to-end test",
    "mock_cli: mark test as mock-based cli test",
    "dns: mark test as dns test",
    "mcp: mark test as mcp test",
    "lark: mark test as lark test"
]
filterwarnings = [
    "ignore::DeprecationWarning:alibabacloud_tea_openapi.*",
    "ignore::DeprecationWarning:tencentcloud.*",
    "ignore::UserWarning:tencentcloud.*",
    "ignore:pkg_resources is deprecated as an API.*:UserWarning",
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace.*:DeprecationWarning",
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:websockets.InvalidStatusCode is deprecated:DeprecationWarning"
]
